// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentWrapper /> should render content correctly 1`] = `
<span
  class="ContentWrapper-juvto2-0 haOASu"
>
  content
</span>
`;

exports[`<ContentWrapper /> should render correctly 1`] = `
<span
  class="ContentWrapper-juvto2-0 haOASu"
/>
`;
